--- a/assesment.css
+++ b/assesment.css
@@ -153,3 +153,15 @@
     right:10px;
     border: 0; 
 }
+
+#dietDIV {
+    background-color: rgba(110, 148, 102);
+    position: absolute;
+    bottom:25px;
+    left:32%;
+    color:rgb(255, 255, 255);
+    border-radius: 30%;
+    text-align: center;
+    width: 34%;
+    height: 50%;
+}
