--- a/assesment.css
+++ b/assesment.css
@@ -20,6 +20,12 @@
     width: 100vw;
 }
 
+#selfcare {
+    background-color:rgb(249, 219, 219);
+    height: 100vh;
+    width: 100vw;
+}
+
 .menu {
     background-color:rgba(161, 204, 204, 0);
     position: absolute;
@@ -37,7 +43,7 @@
 }
 
 .title {
-    color:rgba(134, 111, 87);
+    color:rgb(0, 0, 0);
     text-align: center;
     position:absolute;
     top:0;
@@ -92,6 +98,27 @@
     padding:15px;
     border-radius: 32%;
     color:rgb(255, 255, 255);
+}
+
+#reccomendations {
+    background-color: rgba(134, 111, 87);
+    bottom: 15%;
+    left:50%;
+    text-align: center;
+    position: absolute;
+    color:rgb(255, 255, 255);
+}
+
+#dietDIV {
+    background-color: rgba(110, 148, 102);
+    position: absolute;
+    bottom:25px;
+    left:32%;
+    color:rgb(255, 255, 255);
+    border-radius: 30%;
+    text-align: center;
+    width: 34%;
+    height: 50%;
 }
 
 .sectionNavB {
@@ -154,14 +181,28 @@
     border: 0; 
 }
 
-#dietDIV {
-    background-color: rgba(110, 148, 102);
-    position: absolute;
-    bottom:25px;
-    left:32%;
-    color:rgb(255, 255, 255);
-    border-radius: 30%;
+.exerciseButtons {
+    background-color: rgba(161, 202, 237);
+    border-radius: 34%;
+    border:0;
     text-align: center;
-    width: 34%;
-    height: 50%;
+    position: absolute;
+    height: 10%;
+    width: 200px;
+    color: white;
+    top:50%;
+    left: 50%;
+}
+
+.selfcareButtons {
+    background-color: rgba(215, 122, 122);
+    border-radius: 100%;
+    border:0;
+    text-align: center;
+    position: absolute;
+    height: 10%;
+    width: 200px;
+    color: white;
+    top:50%;
+    left: 42%;
 }
