--- a/assesment.css
+++ b/assesment.css
@@ -20,6 +20,18 @@
     width: 100vw;
 }
 
+#exercise1 {
+    background-color:rgb(203, 231, 254);
+    height: 100vh;
+    width: 100vw;
+}
+
+#exercises {
+    background-color:rgb(203, 231, 254);
+    height: 100vh;
+    width: 100vw;
+}
+
 #selfcare {
     background-color:rgb(249, 219, 219);
     height: 100vh;
@@ -60,8 +72,9 @@
     text-align: center;
     position: absolute;
     padding:15px;
-    border-radius: 32%;
+    border-radius: 10%;
     color:rgb(255, 255, 255);
+    width: 35%;
 }
 
 #greetingDiet {
@@ -72,8 +85,9 @@
     text-align: center;
     position: absolute;
     padding:15px;
-    border-radius: 32%;
+    border-radius: 10%;
     color:rgb(255, 255, 255);
+    width: 35%;
 }
 
 #greetingExercise {
@@ -84,8 +98,9 @@
     text-align: center;
     position: absolute;
     padding:15px;
-    border-radius: 32%;
+    border-radius: 10%;
     color:rgb(255, 255, 255);
+    width: 35%;
 }
 
 #greetingSelfcare {
@@ -96,17 +111,22 @@
     text-align: center;
     position: absolute;
     padding:15px;
-    border-radius: 32%;
+    border-radius: 10%;
     color:rgb(255, 255, 255);
+    width: 35%;
 }
 
 #reccomendations {
     background-color: rgba(134, 111, 87);
-    bottom: 15%;
+    bottom: 7%;
     left:50%;
+    transform: translateX(-50%);
     text-align: center;
     position: absolute;
     color:rgb(255, 255, 255);
+    width: 40%;
+    height: 48%;
+    border-radius: 10%;
 }
 
 #dietDIV {
@@ -183,7 +203,20 @@
 
 .exerciseButtons {
     background-color: rgba(161, 202, 237);
-    border-radius: 34%;
+    border-radius: 8%;
+    border:0;
+    text-align: center;
+    position: absolute;
+    height: 10%;
+    width: 200px;
+    color: white;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.selfcareButtons {
+    background-color: rgba(215, 122, 122);
+    border-radius: 10%;
     border:0;
     text-align: center;
     position: absolute;
@@ -192,17 +225,5 @@
     color: white;
     top:50%;
     left: 50%;
-}
-
-.selfcareButtons {
-    background-color: rgba(215, 122, 122);
-    border-radius: 100%;
-    border:0;
-    text-align: center;
-    position: absolute;
-    height: 10%;
-    width: 200px;
-    color: white;
-    top:50%;
-    left: 42%;
+    transform: translateX(-50%);
 }
